# football_enigma

./: .gitignore  README.md  pyproject.toml
football_enigma/data/: build.py  schema.py  scrape_bayern1314.py  scrape_wc2014.py  statsbomb.py  statsbomb_ids.py  whoscored.py
football_enigma/metrics/: aggregates.py  buildup.py  cadence.py  defending.py  footprint.py  network.py  packing.py  pressure.py  tempo.py  xt.py
football_enigma/utils/: paths.py
football_enigma/viz/: charts.py  pitch.py  theme.py
players/sergio-busquets/: README.md  run_all.py
players/sergio-busquets/notebooks/: 01_the_constant.py  02_space.py  03_radar.py  04_swansong.py  05_never_first.py  06_first_receiver.py  07_territory.py  08_third_man.py  09_receiver_uplift.py  10_persistence.py  _build_axes.py  _chains.py  _pull_career.py  _pull_more.py  _third_man.py  _third_man_replication.py  _third_man_robustness.py  _third_man_spain.py  _third_man_validation.py
players/toni-kroos/: README.md  run_all.py
players/toni-kroos/notebooks/: 01_euro2024.py  02_cadence_quarterback.py  03_wc2014_switches.py  04_cl_finals.py  05_packing_figure.py  06_radar.py  07_wc2014_tournament.py  08_laliga1516.py  09_aging_curve.py  10_wc2018_stress_test.py  11_switch_anatomy.py  12_tempo.py  13_last_pass.py  14_pass_network.py  15_money_context.py  16_bayern_act1.py  _tournaments.py
players/toni-kroos/source/: transfer_fees.csv
tests/: test_buildup.py  test_cadence.py  test_defending.py  test_footprint.py  test_metrics.py  test_network.py  test_packing.py  test_schema.py  test_tempo.py  test_xt.py
